--- a/package.json
+++ b/package.json
@@ -31,19 +31,23 @@
     "lucide-react": "^0.365.0",
     "mysql2": "^3.9.3",
     "next": "14.1.4",
+    "next-client-cookies": "^1.1.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
