--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.1.3",
+    "exceljs": "^4.4.0",
     "jose": "^5.3.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.365.0",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.5",
+    "@types/pdfkit": "^0.13.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
